finishing last version of documentation